# deepin-pc-manager

./: CMakeLists.txt  README.md  README.zh_CN.md
.reuse/: dep5
debian/: changelog  control
deepin-apprepair-plugin/: CMakeLists.txt  apprepairmodel.cpp  apprepairmodel.h  apprepairmodule.cpp  apprepairmodule.h  apprepairwidget.cpp  apprepairwidget.h
deepin-apprepair-plugin/icons/: apprepair_icons.qrc
deepin-apprepair-plugin/translations/: deepin-apprepair_en_US.ts  deepin-apprepair_zh_CN.ts
deepin-autostart-plugin/: CMakeLists.txt  autostartmodel.cpp  autostartmodel.h  autostartmodule.cpp  autostartmodule.h  autostartwidget.cpp  autostartwidget.h  defendertable.cpp
deepin-autostart-plugin/icons/: autostart_icons.qrc
deepin-autostart-plugin/invokers/: dbusinvoker.h
deepin-autostart-plugin/translations/: deepin-autostart_en_US.ts  deepin-autostart_zh_CN.ts
deepin-fcitxrepair-plugin/: CMakeLists.txt  fcitxrepair.sh  fcitxrepairmodel.cpp  fcitxrepairmodel.h  fcitxrepairmodule.cpp  fcitxrepairmodule.h  fcitxrepairwidget.cpp  fcitxrepairwidget.h
deepin-fcitxrepair-plugin/icons/: fcitxrepair_icons.qrc
deepin-fcitxrepair-plugin/translations/: deepin-fcitxrepair_en_US.ts  deepin-fcitxrepair_zh_CN.ts
deepin-fileicon-plugin/: CMakeLists.txt  fileicon.sh  fileiconmodel.cpp  fileiconmodel.h  fileiconmodule.cpp  fileiconmodule.h  fileiconwidget.cpp  fileiconwidget.h
deepin-fileicon-plugin/icons/: fileicon_icons.qrc
deepin-filename-plugin/: CMakeLists.txt  filenamemodel.cpp  filenamemodel.h  filenamemodule.cpp  filenamemodule.h  filenamewidget.cpp  filenamewidget.h  loogfilename.sh
deepin-hostmodify-plugin/: CMakeLists.txt  hostmodifymodel.cpp  hostmodifymodel.h  hostmodifymodule.cpp  hostmodifymodule.h  hostmodifywidget.cpp  hostmodifywidget.h
deepin-keyclean-plugin/: CMakeLists.txt  keyclean.sh  keycleanmodel.cpp  keycleanmodel.h  keycleanmodule.cpp  keycleanmodule.h  keycleanwidget.cpp  keycleanwidget.h
deepin-netcheck-plugin/: CMakeLists.txt  netcheckitem.cpp  netcheckitem.h  netcheckmodel.cpp  netcheckmodel.h  netcheckmodule.cpp  netcheckmodule.h  netcheckwidget.cpp  netcheckwidget.h
deepin-pc-manager/: CMakeLists.txt  com.deepin.deepin-pc-manager.policy  deepin-pc-manager.desktop  dt-settings.json
deepin-pc-manager-server/: CMakeLists.txt
deepin-pc-manager/configs/: org.deepin.dde.deepin-pc-manager.json
deepin-pc-manager/include/interface/: namespace.h  toolboxinterface.h  toolboxproxyinterface.h
deepin-pc-manager/src/: main.cpp  manager_adaptor.cpp  manager_adaptor.h
deepin-pc-manager/src/window/: mainwindow.cpp  mainwindow.h
deepin-pc-manager/src/window/common/: common.cpp  common.h  gsettingkey.h
deepin-pc-manager/src/window/common/invokers/: dbusinvoker.h  invokerfactory.cpp  invokerfactory.h
deepin-pc-manager/src/window/icons/: defender_icons.qrc
deepin-pc-manager/src/window/interface/: frameproxyinterface.h  moduleinterface.cpp  moduleinterface.h
deepin-pc-manager/src/window/modules/systemcheck/: syscheckresultheaderwidget.cpp  syscheckresultheaderwidget.h  syscheckresultitemwidget.cpp  syscheckresultitemwidget.h  systemcheckmodel.cpp  systemcheckmodel.h  systemcheckmodule.cpp  systemcheckmodule.h  systemcheckwidget.cpp  systemcheckwidget.h
deepin-pc-manager/src/window/modules/systemcheck/autostartcheck/: autostartcheckmodel.cpp  autostartcheckmodel.h  defenderlauncherinfo.h
deepin-pc-manager/src/window/modules/systemcheck/diskcheck/: diskcheckmodel.cpp  diskcheckmodel.h
deepin-pc-manager/src/window/modules/systemcheck/systemupdatecheck/: sysupdatermodel.cpp  sysupdatermodel.h
deepin-pc-manager/src/window/modules/toolbox/: toolboxdialog.cpp  toolboxdialog.h  toolboxitemwidget.cpp  toolboxitemwidget.h  toolboxkithelper.cpp  toolboxkithelper.h  toolboxlistview.cpp  toolboxlistview.h  toolboxmodel.cpp  toolboxmodel.h  toolboxmodule.cpp  toolboxmodule.h  toolboxwidget.cpp  toolboxwidget.h
deepin-pc-manager/src/window/modules/trashclean/: trashcleanconfigitem.cpp  trashcleanconfigitem.h  trashcleanmodel.cpp  trashcleanmodel.h  trashcleanmodule.cpp  trashcleanmodule.h  trashcleanresultheaderitem.cpp  trashcleanresultheaderitem.h  trashcleanresultitemwidget.cpp  trashcleanresultitemwidget.h  trashcleanwidget.cpp  trashcleanwidget.h
deepin-pc-manager/translations/: deepin-pc-manager_en_US.ts  deepin-pc-manager_zh_CN.qm  deepin-pc-manager_zh_CN.ts
(+32 files in other folders)
